--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=eventbooker
 
 
 #logging.level.org.springframework=error
-logging.level.com.leon=info
+logging.level.com.leon.event=info
 logging.level.root=error
 logging.level.org.springframework.boot.autoconfigure=info
 logging.level.org.springframework.boot.web.embedded.tomcat=info
@@ -18,5 +18,5 @@ spring.thymeleaf.cache=false
 
 spring.datasource.url=jdbc:mysql://localhost:3306/eventbooker
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root@root
 spring.jpa.hibernate.ddl-auto=update
