Attendee registration & qrCode generate

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.thymeleaf.cache=false
 
 spring.datasource.url=jdbc:mysql://localhost:3306/eventbooker
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root@root
 spring.jpa.hibernate.ddl-auto=update
 
 
